Fix weather date & fix scrollbars & check if enabled

--- a/app/resources/sass/app.scss
+++ b/app/resources/sass/app.scss
@@ -2,6 +2,10 @@
     app.scss
 */
 
+html {
+    overflow-y: hidden;
+}
+
 html, body {
     width: 100%;
     height: 100%;
